--- a/3 - CSS/empresa.html
+++ b/3 - CSS/empresa.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1 id="titulo">Sobre a empresa</h1>
+    <article>
+      <h1 id="titulo">Sobre a empresa</h1>
 
-    <p class="destaque">Estamos no mercado desde 2014.</p>
+      <p class="destaque">Estamos no mercado desde 2014.</p>
 
-    <p class="missao">
-      Nossa missão é <strong>tranformar</strong> a vida de milhares de alunos.
-    </p>
+      <p class="missao">
+        Nossa missão é <strong>tranformar</strong> a vida de milhares de alunos.
+      </p>
+    </article>
   </body>
 </html>
