--- a/4 - Projeto do curso/index.html
+++ b/4 - Projeto do curso/index.html
@@ -3,11 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyPilas</title>
+    <title>Fernanda Graziella</title>
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    Aqui vai o conteúdo
+    <header>
+      <div class="container">
+        <img
+          src="imagens/e - Copia (3).png"
+          alt="Salão Fernanda Graziella"
+          width="200"
+        />
+      </div>
+    </header>
+
+    <div id="planos">
+      <div class="container">
+        <article>
+          <h2>Autônomo</h2>
+          <div>R$ 59/mês</div>
+          <ul>
+            <li>Até <strong>2 usuários</strong></li>
+            <li><strong>500MB</strong> de armazenamento</li>
+            <li>Lançamentos ilimitados</li>
+            <li>Acesso seguro</li>
+            <li>Sem fidelidade</li>
+          </ul>
+          <footer><a href="assine.html">Assinar</a></footer>
+        </article>
+
+        <article>
+          <h2>Micro</h2>
+          <div>R$ 89/mês</div>
+          <ul>
+            <li>Até <strong>6 usuários</strong></li>
+            <li><strong>1GB</strong> de armazenamento</li>
+            <li>Lançamentos ilimitados</li>
+            <li>Acesso seguro</li>
+            <li>Sem fidelidade</li>
+          </ul>
+          <footer><a href="assine.html">Assinar</a></footer>
+        </article>
+
+        <article style="margin-right: 0;">
+          <h2>Pequena</h2>
+          <div>R$ 99/mês</div>
+          <ul>
+            <li>Até <strong>10 usuários</strong></li>
+            <li><strong>5GB</strong> de armazenamento</li>
+            <li>Lançamentos ilimitados</li>
+            <li>Acesso seguro</li>
+            <li>Sem fidelidade</li>
+          </ul>
+          <footer><a href="assine.html">Assinar</a></footer>
+        </article>
+      </div>
+    </div>
   </body>
 </html>
