--- a/4 - Projeto do curso/index.html
+++ b/4 - Projeto do curso/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fernanda Graziella</title>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/componentes.css" />
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <header>
+    <header class="layout-cabecalho">
       <div class="container">
         <img
           src="imagens/e - Copia (3).png"
@@ -19,47 +22,98 @@
       </div>
     </header>
 
-    <div id="planos">
+    <section class="layout-principal">
       <div class="container">
-        <article>
-          <h2>Autônomo</h2>
-          <div>R$ 59/mês</div>
-          <ul>
-            <li>Até <strong>2 usuários</strong></li>
-            <li><strong>500MB</strong> de armazenamento</li>
-            <li>Lançamentos ilimitados</li>
-            <li>Acesso seguro</li>
-            <li>Sem fidelidade</li>
-          </ul>
-          <footer><a href="assine.html">Assinar</a></footer>
-        </article>
+        <div class="principal">
+          <h1 class="principal__titulo">
+            Mulheres mais que <strong>perfeitas</strong>
+          </h1>
 
-        <article>
-          <h2>Micro</h2>
-          <div>R$ 89/mês</div>
-          <ul>
-            <li>Até <strong>6 usuários</strong></li>
-            <li><strong>1GB</strong> de armazenamento</li>
-            <li>Lançamentos ilimitados</li>
-            <li>Acesso seguro</li>
-            <li>Sem fidelidade</li>
-          </ul>
-          <footer><a href="assine.html">Assinar</a></footer>
-        </article>
+          <p class="principal__subtitulo">
+            Transformando sua beleza indiscutível
+          </p>
 
-        <article style="margin-right: 0;">
-          <h2>Pequena</h2>
-          <div>R$ 99/mês</div>
-          <ul>
-            <li>Até <strong>10 usuários</strong></li>
-            <li><strong>5GB</strong> de armazenamento</li>
-            <li>Lançamentos ilimitados</li>
-            <li>Acesso seguro</li>
-            <li>Sem fidelidade</li>
-          </ul>
-          <footer><a href="assine.html">Assinar</a></footer>
-        </article>
+          <div class="principal__acao">
+            <a href="#planos" class="botao">Conheça os planos</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="layout-depoimento">
+      <div class="container">
+        <div class="depoimento">
+          <blockquote>
+            "Estou totalmente satisfeita com os serviço que realizei e continuo
+            realizando no Salão Fernanda Graziella. Indico cegamente!!!"
+          </blockquote>
+
+          <div class="depoimento__autor">
+            <img src="imagens/maria-joaquina.jpg" alt="Maria Joaquina" />
+            <p>Maria Joaquina</p>
+          </div>
+        </div>
       </div>
     </div>
+
+    <div id="planos" class="layout-planos">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <article class="plano">
+              <h2 class="plano__cabecalho">Pacote 1</h2>
+              <div class="plano__preco">R$ 59/mês</div>
+              <ul class="plano__caracteristicas">
+                <li><strong>2 mãos</strong></li>
+                <li><strong>2 pés</strong></li>
+                <li>Hora marcada</li>
+                <li>Sem fidelidade</li>
+              </ul>
+              <footer class="plano__rodape">
+                <a href="comprar.html" class="botao botao--comprar">Comprar</a>
+              </footer>
+            </article>
+          </div>
+
+          <div class="col-md-4">
+            <article class="plano">
+              <h2 class="plano__cabecalho">Pacote 2</h2>
+              <div class="plano__preco">R$ 79/mês</div>
+              <ul class="plano__caracteristicas">
+                <li><strong>4 mãos</strong></li>
+                <li><strong>2 pés</strong></li>
+                <li>Hora marcada</li>
+                <li>Sem fidelidade</li>
+              </ul>
+              <footer class="plano__rodape">
+                <a href="comprar.html" class="botao botao--comprar">Comprar</a>
+              </footer>
+            </article>
+          </div>
+
+          <div class="col-md-4">
+            <article class="plano">
+              <h2 class="plano__cabecalho">Pacote 3</h2>
+              <div class="plano__preco">R$ 99/mês</div>
+              <ul class="plano__caracteristicas">
+                <li><strong>4 mãos</strong></li>
+                <li><strong>4 pés</strong></li>
+                <li>Hora marcada</li>
+                <li>Sem fidelidade</li>
+              </ul>
+              <footer class="plano__rodape">
+                <a href="comprar.html" class="botao botao--comprar">Comprar</a>
+              </footer>
+            </article>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="layout-rodape">
+      <div class="container">
+        <p>&copy Todos os direitos reservados</p>
+      </div>
+    </footer>
   </body>
 </html>
